--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
         "webpack": "^4.41.2",
         "webpack-bundle-analyzer": "^3.6.0",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.9.0"
+        "webpack-dev-server": "^3.9.0",
+        "express": "^4.17.1",
+        "ejs": "^3.1.2",
+        "eslint": "^5.16.0",
+        "eslint-plugin-react": "^7.11.1",
+        "axios": "^0.19.2",
+        "body-parser": "^1.19.0"
     }
 }
