--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "mojito",
     "version": "0.0.1",
     "scripts": {
-        "start": "webpack --config webpack.config.js"
+        "build": "webpack -p --config ./script/webpack.config.page.js",
+        "build:edit": "webpack -p --config ./script/webpack.config.edit.js",
+        "dev:edit": "webpack-dev-server --config ./script/webpack.config.edit.js"
     },
-    "dependencies": {},
-    "devDependencies": {
+    "dependencies": {
         "@babel/core": "^7.7.4",
         "@babel/plugin-proposal-class-properties": "^7.7.4",
         "@babel/plugin-proposal-decorators": "^7.7.4",
@@ -19,22 +20,27 @@
         "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
         "babel-polyfill": "^6.26.0",
+        "body-parser": "^1.19.0",
         "clean-webpack-plugin": "^3.0.0",
+        "compression": "^1.7.4",
         "cross-env": "^5.2.1",
         "css-loader": "^0.28.11",
-        "file-loader": "^1.1.11",
-        "html-webpack-plugin": "^3.2.0",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "webpack": "^4.41.2",
-        "webpack-bundle-analyzer": "^3.6.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.9.0",
-        "express": "^4.17.1",
         "ejs": "^3.1.2",
         "eslint": "^5.16.0",
         "eslint-plugin-react": "^7.11.1",
-        "axios": "^0.19.2",
-        "body-parser": "^1.19.0"
-    }
+        "express": "^4.17.1",
+        "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^3.2.0",
+        "less": "^3.10.3",
+        "less-loader": "^4.1.0",
+        "node-persist": "^3.0.5",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "style-loader": "^0.21.0",
+        "webpack": "^4.41.2",
+        "webpack-bundle-analyzer": "^3.6.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.9.0"
+    },
+    "devDependencies": {}
 }
