--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "mojito",
     "version": "0.0.1",
     "scripts": {
-        "build": "webpack -p --config ./script/webpack.config.page.js",
-        "build:edit": "webpack -p --config ./script/webpack.config.edit.js",
-        "dev:edit": "webpack-dev-server --config ./script/webpack.config.edit.js"
+        "start": "npm run build && npm run server",
+        "build": "concurrently \"npm run build:edit\" \"npm run build:comp\"",
+        "server": "node ./server/index.js",
+        "build:edit": "webpack --progress --config ./script/webpack.config.edit.js",
+        "build:page": "webpack --progress --config ./script/webpack.config.page.js",
+        "build:comp": "webpack --progress --config ./script/webpack.config.comp.js"
     },
     "dependencies": {
         "@babel/core": "^7.7.4",
@@ -16,14 +19,13 @@
         "@babel/preset-env": "^7.7.4",
         "@babel/preset-react": "^7.7.4",
         "@babel/runtime-corejs2": "^7.7.4",
+        "antd": "^4.2.0",
         "babel-eslint": "^10.0.3",
-        "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
-        "babel-polyfill": "^6.26.0",
         "body-parser": "^1.19.0",
         "clean-webpack-plugin": "^3.0.0",
         "compression": "^1.7.4",
-        "cross-env": "^5.2.1",
+        "concurrently": "^5.2.0",
         "css-loader": "^0.28.11",
         "ejs": "^3.1.2",
         "eslint": "^5.16.0",
@@ -33,12 +35,11 @@
         "html-webpack-plugin": "^3.2.0",
         "less": "^3.10.3",
         "less-loader": "^4.1.0",
-        "node-persist": "^3.0.5",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "style-loader": "^0.21.0",
         "webpack": "^4.41.2",
-        "webpack-bundle-analyzer": "^3.6.0",
+        "webpack-bundle-analyzer": "^3.7.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.9.0"
     },
