edit add function

--- a/comp/Image/config.json
+++ b/comp/Image/config.json
@@ -11,6 +11,7 @@
         }
     ],
     "defaultStyles": {
+        "position": "relative",
         "width": "100px",
         "height": "100px",
         "marginLeft": "auto",
@@ -18,6 +19,6 @@
         "marginTop": "0px"
     },
     "defaultProps": {
-
+        "src": "https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=3363295869,2467511306&fm=26&gp=0.jpg"
     }
 }
