--- a/comp/Text/config.json
+++ b/comp/Text/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "文本组件",
+    "name": "文本",
     "staticProps": [
         {
             "name": "文本",
@@ -14,6 +14,10 @@
             "prop": "fontSize"
         },
         {
+            "name": "文字加粗",
+            "prop": "fontWeight"
+        },
+        {
             "name": "行高",
             "prop": "lineHeight"
         },
@@ -24,12 +28,14 @@
     ],
     "defaultStyles": {
         "position": "relative",
-        "width": "70px"
+        "width": "200px"
     },
     "defaultProps": {
         "text": "默认文本",
-        "fontSize": "12px",
-        "lineHeight": "16px",
+        "fontSize": "24px",
+        "lineHeight": "36px",
         "textAlign": "center"
-    }
+    },
+    "hasChild": false,
+    "canResizeByMouse": true
 }
