--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build:edit": "webpack --progress --config ./script/webpack.config.edit.js",
         "build:page": "webpack --progress --config ./script/webpack.config.page.js",
         "build:comp": "webpack --progress --config ./script/webpack.config.comp.js",
-        "dev:server": "node ./server/index.js -dev",
+        "dev": "node ./script/debugComp.js -dev",
         "dev:edit": "webpack-dev-server --config ./script/webpack.config.edit.js -dev"
     },
     "dependencies": {
